--- a/UsersNotebook/appsettings.json
+++ b/UsersNotebook/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "<connection-string>"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
