--- a/UserNotebook.Core/UserNotebook.Core.csproj
+++ b/UserNotebook.Core/UserNotebook.Core.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Data\UsersNotebook.Data.csproj" />
+  </ItemGroup>
+
 </Project>
