--- a/UsersNotebook/UsersNotebook.csproj
+++ b/UsersNotebook/UsersNotebook.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Data\UsersNotebook.Data.csproj" />
+    <ProjectReference Include="..\UserNotebook.Core\UserNotebook.Core.csproj" />
   </ItemGroup>
 
 </Project>
