Dodanie reportService. Dodanie przycisku do generowania listy użytkowników

--- a/UserNotebook.Core/UserNotebook.Core.csproj
+++ b/UserNotebook.Core/UserNotebook.Core.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DinkToPdf" Version="1.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Data\UsersNotebook.Data.csproj" />
   </ItemGroup>
 
