Dodanie Libwkhtmltox w plikach w razie problemu z jego lokalizacją

--- a/UsersNotebook/appsettings.json
+++ b/UsersNotebook/appsettings.json
@@ -2,6 +2,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "<connection-string>"
   },
+  //<paste to LibwkhtmltoxPath path to libwkhtmltox if error show. File should be next to appsettings>
+  "LibwkhtmltoxPath": "",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
