--- a/UsersNotebook/appsettings.json
+++ b/UsersNotebook/appsettings.json
@@ -1,9 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "<connection-string>"
+    "DefaultConnection": "Server=<server_name>;Database=<database_name>;Trusted_Connection=true;MultipleActiveResultSets=true;Encrypt=false;"
   },
-  //<paste to LibwkhtmltoxPath path to libwkhtmltox if error show. File should be next to appsettings>
-  "LibwkhtmltoxPath": "",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
