--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,11 @@
 version: '3.4'
 
 services:
-  app:
-    image: usersnotebook
-    build:
-      context: .
-      dockerfile: Dockerfile
+  webapp:
+    image: marcinkoz52/usersnotebook:webapp
+    build: .
     ports:
       - "8080:80"
-    depends_on:
-      - db
-    environment:
-      ConnectionStrings__DefaultConnection: "Server=db;Database=master;User=sa;Password=Your_password123!;Encrypt=false;"
   db:
     image: "mcr.microsoft.com/mssql/server"
     environment:
